--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <h1>Предложения обмена</h1>
 {% for item in news%}
 <div class="col-md6 border rounded">
+    <img src="C:\Users\nfrcf\Provito2\templates\main.jpeg">
     <h2>{{item.title}}</h2>
     <div>
         {{item.content}}
