--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,14 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.label.label }}
-        <br>{{ form.label(class="form-control") }}{{form.submit(type="submit", class="btn btn-primary")}}<br>
+        <div class="row">
+            <div class="col-9" style="padding: 4px; border:2px">
+                {{ form.label(class="form-control") }}
+            </div>
+            <div class="col-2" style="padding: 4px; border:2px">
+                {{form.submit(type="submit", class="btn btn-primary")}}
+            </div>
+        </div>
         {% for error in form.label.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -15,12 +22,12 @@
 </form>
 <h1>Предложения обмена</h1>
 {% for item in news%}
-<div class="col-md6 border rounded" style="padding:2px; margin:3px">
-    <div class="row">
+<div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%">
+    <div class="row align-items-center">
         <div class="col-2">
             <img src="{{url_for('static', filename=item.file)}}" alt="В этом виноват Рома" class="w-100 h-100">
         </div>
-        <div class="col-10">
+        <div class="col-8">
             <h2>{{item.title}}</h2>
             <div>
                 {{item.content}}
@@ -35,8 +42,15 @@
                     Удалить
                 </a>
             </div>
-            {% endif %}
+            {% else %}
         </div>
+
+            <div class="col-2">
+                <a href="/chat/{{ item.user.id }}" class="btn btn-success">
+                    Чат с пользователем
+                </a>
+            </div>
+        {% endif %}
     </div>
 </div>
 {% endfor %}
