--- a/templates/chat_room.html
+++ b/templates/chat_room.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
 
 
-<title>chat room - Bootdey.com</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-<style type="text/css">
+    <title>chat room - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
     	body {
   padding-top: 0;
   font-size: 12px;
@@ -204,229 +204,234 @@ a:hover, a:active, a:focus {
   text-decoration: none;
   outline: 0;
 }
+
     </style>
 </head>
 <body>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container bootstrap snippets bootdey">
-<div class="row">
-<div class="col-md-4 bg-white ">
-<div class=" row border-bottom padding-sm" style="height: 40px;">
-Member
-</div>
+    <div class="row">
+        <div class="col-md-4 bg-white ">
+            <div class=" row border-bottom padding-sm" style="height: 40px;">
+                Member
+            </div>
 
 
-<ul class="friend-list">
-<li class="active bounceInDown">
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>John Doe</strong>
-</div>
-<div class="last-message text-muted">Hello, Are you there?</div>
-<small class="time text-muted">Just now</small>
-<small class="chat-alert label label-danger">1</small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Jane Doe</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">5 mins ago</small>
-<small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_3.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Kate</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">Yesterday</small>
-<small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Kate</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">Yesterday</small>
-<small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Kate</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">Yesterday</small>
-<small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_6.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Kate</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">Yesterday</small>
-<small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_5.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Kate</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">Yesterday</small>
-<small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-</a>
-</li>
-<li>
-<a href="#" class="clearfix">
-<img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-<div class="friend-name">
-<strong>Jane Doe</strong>
-</div>
-<div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-<small class="time text-muted">5 mins ago</small>
-<small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
-</a>
-</li>
-</ul>
-</div>
+            <ul class="friend-list">
+                <li class="active bounceInDown">
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>John Doe</strong>
+                        </div>
+                        <div class="last-message text-muted">Hello, Are you there?</div>
+                        <small class="time text-muted">Just now</small>
+                        <small class="chat-alert label label-danger">1</small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Jane Doe</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">5 mins ago</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_3.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Kate</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">Yesterday</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Kate</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">Yesterday</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Kate</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">Yesterday</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_6.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Kate</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">Yesterday</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_5.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Kate</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">Yesterday</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                        <div class="friend-name">
+                            <strong>Jane Doe</strong>
+                        </div>
+                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                        <small class="time text-muted">5 mins ago</small>
+                        <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
+                    </a>
+                </li>
+            </ul>
+        </div>
 
 
-<div class="col-md-8 bg-white ">
-<div class="chat-message">
-<ul class="chat">
-<li class="left clearfix">
+        <div class="col-md-8 bg-white ">
+            <div class="chat-message">
+                <ul class="chat">
+                    <li class="left clearfix">
 <span class="chat-img pull-left">
 <img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">John Doe</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
-</div>
-</li>
-<li class="right clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">John Doe</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">Sarah</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales at.
-</p>
-</div>
-</li>
-<li class="left clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Sarah</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales at.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="left clearfix">
 <span class="chat-img pull-left">
 <img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">John Doe</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
-</div>
-</li>
-<li class="right clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">John Doe</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">Sarah</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales at.
-</p>
-</div>
-</li>
-<li class="left clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Sarah</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales at.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="left clearfix">
 <span class="chat-img pull-left">
 <img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">John Doe</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
-</div>
-</li>
-<li class="right clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">John Doe</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">Sarah</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales at.
-</p>
-</div>
-</li>
-<li class="right clearfix">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Sarah</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales at.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
-<div class="chat-body clearfix">
-<div class="header">
-<strong class="primary-font">Sarah</strong>
-<small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-</div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales at.
-</p>
-</div>
-</li>
-</ul>
-</div>
-<div class="chat-box bg-white">
-<div class="input-group">
-<input class="form-control border no-shadow no-rounded" placeholder="Type your message here">
-<span class="input-group-btn">
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Sarah</strong>
+                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales at.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="chat-box bg-white">
+                <div class="input-group">
+                    <input class="form-control border no-shadow no-rounded" placeholder="Type your message here">
+                    <span class="input-group-btn">
 <button class="btn btn-success no-rounded" type="button">Send</button>
 </span>
-</div>
-</div>
-</div>
-</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript">
-	
+
 </script>
 </body>
 </html>
