--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 </form>
 <h1>Предложения обмена</h1>
 {% for item in news%}
+{% if search in item.title or not search%}
 <div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%">
     <div class="row align-items-center">
         <div class="col-2">
@@ -53,6 +54,7 @@
         {% endif %}
     </div>
 </div>
+{% endif %}
 {% endfor %}
     {% if current_user.is_authenticated %}
     <a href="news" class="btn btn-secondary">Добавить новость</a>
