--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>{{title}}</title>
 </head>
-<body>
+<body background="/static/img/backGround.png">
 <header>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="/">Наше приложение</a>
