--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <h1>Предложения обмена</h1>
 {% for item in news%}
 {% if search in item.title or not search%}
-<div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%">
+<div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
     <div class="row align-items-center">
         <div class="col-2">
             <img src="{{url_for('static', filename=item.file)}}" alt="В этом виноват Рома" class="w-100 h-100">
@@ -46,14 +46,13 @@
                 </a>
             </div>
             {% else %}
+            <div class="col-2">
+                <a href="/chat/{{ item.user.id }}" class="btn btn-success">
+                    Чат с пользователем
+                </a>
+            </div>
+            {% endif %}
         </div>
-
-        <div class="col-2">
-            <a href="/chat/{{ item.user.id }}" class="btn btn-success">
-                Чат с пользователем
-            </a>
-        </div>
-        {% endif %}
     </div>
 </div>
 {% endif %}
