--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body background="/static/img/backGround.png">
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="/">Наше приложение</a>
+        <a class="navbar-brand" href="/">Provito</a>
         {% if current_user.is_authenticated %}
         <a class="navbar-brand" href="/settings">{{ current_user.name }}</a>
         {% else %}
