--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
 <a class="btn btn-success" href="/">Вернуться</a>
 <h1>Начтройки</h1>
 <h2>Имя пользователя: {{user.name}}</h2>
 <h2>Информация о пользователе: {{user.about}}</h2>
 <h2>Почта: {{user.email}}</h2>
-<a class="btn btn-success" href="/logout">Выйти</a>
+<a class="btn btn-danger" href="/logout">Выйти</a>
 <a class="btn btn-success" href="/settings/edit">Изменить</a>
+</div>
 {% endblock %}
