--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="/">Provito</a>
         {% if current_user.is_authenticated %}
+        <a href="news" class="btn btn-success">Создать объявление</a>
+        {% endif %}
+        {% if current_user.is_authenticated %}
         <a class="navbar-brand" href="/settings">{{ current_user.name }}</a>
         {% else %}
         <p>
