--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 </div>
 <h1>Предложения обмена</h1>
 {% for item in news%}
-{% if search in item.title or not search%}
+{% if ((search['title'] in item.title or not search['title']) and (search['author'] == item.user.email or not search['author']))%}
 <div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
     <div class="row align-items-center">
         <div class="col-2">
@@ -57,7 +57,5 @@
 </div>
 {% endif %}
 {% endfor %}
-{% if current_user.is_authenticated %}
-<a href="news" class="btn btn-secondary">Добавить новость</a>
-{% endif %}
+
 {% endblock %}
