--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,5 +9,6 @@
 <h2>Почта: {{user.email}}</h2>
 <a class="btn btn-danger" href="/logout">Выйти</a>
 <a class="btn btn-success" href="/settings/edit">Изменить</a>
+<a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
 </div>
 {% endblock %}
