--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
     </p>
 </form>
 <h1>Предложения обмена</h1>
-{% for item in news%}
+{% for item in advertisement%}
 {% if search %}
 {% if search in item.title%}
 <div class="col-md6 border rounded" style="padding:2px; margin:3px">
@@ -30,10 +30,10 @@
             Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
             {% if current_user.is_authenticated and current_user == item.user %}
             <div>
-                <a href="/news/{{ item.id }}" class="btn btn-warning">
+                <a href="/advertisement/{{ item.id }}" class="btn btn-warning">
                     Изменить
                 </a>
-                <a href="/news_delete/{{ item.id }}" class="btn btn-danger">
+                <a href="/advertisement_delete/{{ item.id }}" class="btn btn-danger">
                     Удалить
                 </a>
             </div>
@@ -56,10 +56,10 @@
             Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
             {% if current_user.is_authenticated and current_user == item.user %}
             <div>
-                <a href="/news/{{ item.id }}" class="btn btn-warning">
+                <a href="/advertisement/{{ item.id }}" class="btn btn-warning">
                     Изменить
                 </a>
-                <a href="/news_delete/{{ item.id }}" class="btn btn-danger">
+                <a href="/advertisement_delete/{{ item.id }}" class="btn btn-danger">
                     Удалить
                 </a>
             </div>
@@ -70,6 +70,6 @@
 {% endif %}
 {% endfor %}
 {% if current_user.is_authenticated %}
-<a href="news" class="btn btn-secondary">Добавить новость</a>
+<a href="advertisement" class="btn btn-secondary">Добавить новость</a>
 {% endif %}
 {% endblock %}
