Я начал добавлять комментари для файла chat_room.html

--- a/templates/chat_room(test).html
+++ b/templates/chat_room(test).html
@@ -13,8 +13,8 @@
         </div>
         {% endif %}
         {% endfor %}
-        {{ form.message.label }} {{ form.message(class="form-control") }} {{ form.submit(type="submit", class="btn
-        btn-primary") }}
+        {{ form.message.label }}
+        {{ form.message(class="form-control") }} {{ form.submit(type="submit", class="btn btn-primary") }}
     </div>
 </form>
 {% endblock %}
