--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/styles/windows_style.css">
     <title>{{title}}</title>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,6 +27,11 @@
         {% endif %}
     </nav>
 </header>
+<a href="#" id="main", class="col-md6 border rounded">
+    <div id="okno">
+        Всплывающее окошко!
+    </div>
+</a>
 <!-- Begin page content -->
 <main role="main" class="container">
     {% block content %}{% endblock %}
