--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,6 +8,7 @@
 <h2>Информация о пользователе: {{user.about}}</h2>
 <h2>Почта: {{user.email}}</h2>
 <a class="btn btn-danger" href="/logout">Выйти</a>
+<a class="btn btn-danger" href="/logout">Удалить аккаунт</a>
 <a class="btn btn-success" href="/settings/edit">Изменить</a>
 <a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
 </div>
