Я начал добавлять комментари для файла chat_room.html

--- a/templates/chat_room.html
+++ b/templates/chat_room.html
@@ -113,116 +113,47 @@
             <div class="chat-message">
                 <ul class="chat">
                     <!-- Начало сообщения -->
+                    {% for message in messages %}
+                    {% if message['id'] == other %}
                     <li class="left clearfix">
 <span class="chat-img pull-left">
 <img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
 </span>
                         <div class="chat-body clearfix">
                             <div class="header">
-                                <strong class="primary-font">John Doe</strong>
+                                <strong class="primary-font">{{other.name}}</strong>
                                 <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                {{message['text']}}
                             </p>
                         </div>
                     </li>
-                    <li class="right clearfix">
-                        <!-- Конец сообщения -->
-<span class="chat-img pull-right">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
-</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Sarah</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                                dolor, quis ullamcorper ligula sodales at.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="left clearfix">
-<span class="chat-img pull-left">
-<img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
-</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">John Doe</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </li>
+                    <!-- Конец сообщения -->
+                    {% else %}
                     <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
                         <div class="chat-body clearfix">
                             <div class="header">
-                                <strong class="primary-font">Sarah</strong>
+                                <strong class="primary-font">{{cur.name}}</strong>
                                 <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                                dolor, quis ullamcorper ligula sodales at.
+                                {{message['text']}}
                             </p>
                         </div>
                     </li>
-                    <li class="left clearfix">
-<span class="chat-img pull-left">
-<img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
-</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">John Doe</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="right clearfix">
-<span class="chat-img pull-right">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
-</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Sarah</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                                dolor, quis ullamcorper ligula sodales at.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="right clearfix">
-<span class="chat-img pull-right">
-<img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
-</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Sarah</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                                dolor, quis ullamcorper ligula sodales at.
-                            </p>
-                        </div>
-                    </li>
+                        {% endif %}
+                        {% endfor %}
                 </ul>
             </div>
             <div class="chat-box bg-white">
                 <div class="input-group">
                     <input class="form-control border no-shadow no-rounded" placeholder="Type your message here">
                     <span class="input-group-btn">
-<button class="btn btn-success no-rounded" type="button">Send</button>
+{{ form.submit(type="submit", class="btn btn-primary") }}
 </span>
                 </div>
             </div>
