--- a/templates/chat_room.html
+++ b/templates/chat_room.html
@@ -1,169 +1,169 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends "base.html" %}
+{% block content %}
+<form action="" method="post" enctype="multipart/form-data">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/styles/chat_style.css" rel="stylesheet">
-</head>
-<body>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container bootstrap snippets bootdey">
-    <div class="row">
-        <div class="col-md-4 bg-white ">
-            <div class=" row border-bottom padding-sm" style="height: 40px;">
-                Member
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <div class="container bootstrap snippets bootdey">
+        <div class="row">
+            <div class="col-md-4 bg-white ">
+                <div class=" row border-bottom padding-sm" style="height: 40px;">
+                    Member
+                </div>
+
+                <!-- Короч это активные чаты -->
+                <ul class="friend-list">
+                    <li class="active bounceInDown">
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>John Doe</strong>
+                            </div>
+                            <div class="last-message text-muted">Hello, Are you there?</div>
+                            <small class="time text-muted">Just now</small>
+                            <small class="chat-alert label label-danger">1</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Jane Doe</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">5 mins ago</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_3.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Kate</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">Yesterday</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Kate</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">Yesterday</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Kate</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">Yesterday</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_6.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Kate</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">Yesterday</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_5.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Kate</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">Yesterday</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="clearfix">
+                            <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
+                            <div class="friend-name">
+                                <strong>Jane Doe</strong>
+                            </div>
+                            <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
+                            <small class="time text-muted">5 mins ago</small>
+                            <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
-            <!-- Короч это активные чаты -->
-            <ul class="friend-list">
-                <li class="active bounceInDown">
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>John Doe</strong>
-                        </div>
-                        <div class="last-message text-muted">Hello, Are you there?</div>
-                        <small class="time text-muted">Just now</small>
-                        <small class="chat-alert label label-danger">1</small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Jane Doe</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">5 mins ago</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_3.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Kate</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">Yesterday</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Kate</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">Yesterday</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Kate</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">Yesterday</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_6.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Kate</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">Yesterday</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_5.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Kate</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">Yesterday</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-reply"></i></small>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="clearfix">
-                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="" class="img-circle">
-                        <div class="friend-name">
-                            <strong>Jane Doe</strong>
-                        </div>
-                        <div class="last-message text-muted">Lorem ipsum dolor sit amet.</div>
-                        <small class="time text-muted">5 mins ago</small>
-                        <small class="chat-alert text-muted"><i class="fa fa-check"></i></small>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <!-- ТУт конец активных чатов -->
-        <div class="col-md-8 bg-white ">
-            <div class="chat-message">
-                <ul class="chat">
-                    <!-- Начало сообщения -->
-                    {% for message in messages %}
-                    {% if message['id'] == other %}
-                    <li class="left clearfix">
+            <!-- ТУт конец активных чатов -->
+            <div class="col-md-8 bg-white ">
+                <div class="chat-message" style="overflow-y:scroll;height:30%;">
+                    <ul class="chat">
+                        <!-- Начало сообщения -->
+                        {% for message in messages %}
+                        {% if message['id'] == other.id %}
+                        <li class="left clearfix">
 <span class="chat-img pull-left">
 <img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
 </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">{{other.name}}</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
+                            <div class="chat-body clearfix">
+                                <div class="header">
+                                    <strong class="primary-font">{{other.name}}</strong>
+                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins
+                                        ago</small>
+                                </div>
+                                <p>
+                                    {{message['text']}}
+                                </p>
                             </div>
-                            <p>
-                                {{message['text']}}
-                            </p>
-                        </div>
-                    </li>
-                    <!-- Конец сообщения -->
-                    {% else %}
-                    <li class="right clearfix">
+                        </li>
+                        <!-- Конец сообщения -->
+                        {% else %}
+                        <li class="right clearfix">
 <span class="chat-img pull-right">
 <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
 </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">{{cur.name}}</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
+                            <div class="chat-body clearfix">
+                                <div class="header">
+                                    <strong class="primary-font">{{cur.name}}</strong>
+                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins
+                                        ago</small>
+                                </div>
+                                <p>
+                                    {{message['text']}}
+                                </p>
                             </div>
-                            <p>
-                                {{message['text']}}
-                            </p>
-                        </div>
-                    </li>
+                        </li>
                         {% endif %}
                         {% endfor %}
-                </ul>
-            </div>
-            <div class="chat-box bg-white">
-                <div class="input-group">
-                    <input class="form-control border no-shadow no-rounded" placeholder="Type your message here">
-                    <span class="input-group-btn">
-{{ form.submit(type="submit", class="btn btn-primary") }}
-</span>
+                    </ul>
+                </div>
+                <div class="chat-box bg-white">
+                    <div class="input-group">
+                        <span class="input-group-btn">
+                            {{ form.message(class="form-control border no-shadow no-rounded", style="width:80%;") }}
+                            {{ form.submit(type="submit", class="btn btn-primary", style="width:20%;") }}
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script type="text/javascript">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
 
-</script>
-</body>
-</html>
+    </script>
+</form>
+{% endblock %}
