--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         {% endif %}
     </nav>
 </header>
-<a href="#" id="main", class="col-md6 border rounded">
+<a href="#" id="main" class="col-md6 border rounded">
     <div id="okno">
         Всплывающее окошко!
     </div>
