--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
         <a href="/advertisement" class="btn btn-success">Создать объявление</a>
         {% endif %}
         {% if current_user.is_authenticated %}
+        <a href="/chat/0" class="btn btn-success">Чаты</a>
+        {% endif %}
+        {% if current_user.is_authenticated %}
         <a class="navbar-brand" href="/settings">{{ current_user.name }}</a>
         {% else %}
         <p>
