--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+<link href="/static/styles/chat_style.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
-<a class="btn btn-success" href="/">Вернуться</a>
-<h1>Начтройки</h1>
-<h2>Имя пользователя: {{user.name}}</h2>
-<h2>Информация о пользователе: {{user.about}}</h2>
-<h2>Почта: {{user.email}}</h2>
-<a class="btn btn-danger" href="/logout">Выйти</a>
-<a class="btn btn-danger" href="/logout">Удалить аккаунт</a>
-<a class="btn btn-success" href="/settings/edit">Изменить</a>
-<a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
+    <a class="btn btn-success" href="/">Вернуться</a>
+    <h1>Начтройки</h1>
+    <h2>Имя пользователя: {{user.name}}</h2>
+    <h2>Аватар: <img src="{{user.avatar}}" style="display: block; margin-left: auto;
+    margin-right: auto;  width: 40%;"></h2>
+    <h2>Информация о пользователе: {{user.about}}</h2>
+    <h2>Почта: {{user.email}}</h2>
+    <a class="btn btn-danger" href="/logout">Выйти</a>
+    <a class="btn btn-danger" href="/logout">Удалить аккаунт</a>
+    <a class="btn btn-success" href="/settings/edit">Изменить</a>
+    <a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
 </div>
 {% endblock %}
