--- a/templates/advertisement_page.html
+++ b/templates/advertisement_page.html
@@ -3,7 +3,7 @@
 <link href="/static/styles/windows_style.css">
 <div class="col-md12 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
     <h1>{{advertisement.title}}</h1>
-    <img src="/static/{{advertisement.file}}" style="display: block; margin-left: auto;
+    <img src="{{advertisement.file}}" style="display: block; margin-left: auto;
     margin-right: auto;  width: 80%;">
     <h3>Описание:</h3>
     <div style="font-size:x-large;">
