--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,7 +9,7 @@
     <a class="btn btn-success" href="/">Вернуться</a>
     <h1>Начтройки</h1>
     <h2>Имя пользователя: {{user.name}}</h2>
-    <h2>Аватар: <img src="{{user.avatar}}" style="display: block; margin-left: auto;
+    <h2>Аватар: <img src="/static/{{ user.avatar }}" style="display: block; margin-left: auto;
     margin-right: auto;  width: 40%;"></h2>
     <h2>Информация о пользователе: {{user.about}}</h2>
     <h2>Почта: {{user.email}}</h2>
