--- a/templates/settings.html
+++ b/templates/settings.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <a class="btn btn-danger" href="/logout">Выйти</a>
-    <a class="btn btn-danger" href="/logout">Удалить аккаунт</a>
+    <a class="btn btn-danger" href="/settings/delete">Удалить аккаунт</a>
     <a class="btn btn-success" href="/settings/edit">Изменить</a>
     <a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
 </div>
