--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
           {% if current_user.is_authenticated %}
         <div class="collapse navbar-collapse">
           <div class="navbar-nav">
-              <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/advertisement"><b>создать обьявление</b></a>
+              <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/advertisement"><b>Создать обьявление</b></a>
             <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/chat/0"><b>Чаты</b></a>
-            <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/authors"><b>авторы</b></a>
-            <a class="nav-link active" aria-current="page" href="/settings"><b>личный кабинет</b></a>
+            <a style="margin-right: 15px" class="nav-link active" aria-current="page" href="/authors"><b>Авторы</b></a>
+            <a class="nav-link active" aria-current="page" href="/settings"><b>Личный кабинет</b></a>
           </div>
           {% else %}
           <div class="collapse navbar-collapse">
